src/index.css
body {
    background-color: black;
    font-family: termina, sans-serif;
    margin: 0px;
    padding: 0px;
    height: 100vh;
    width: 100vw;
    color: white;
}

#canvas {
    position: fixed;
    top: 0px;
    left: 0px;
    background-color: black;
    width: 100%;
    height: 100%;
    /* border: 1px solid; */
}

.container {
    display: grid;
    position:absolute;
    z-index:1;
    width:100vw;
    height: 100vh;
    grid-gap: 0px;
    place-content: center;
}

.content {
    display: flex;
    gap: 5em;
    width: 100%;
    padding-top: 3em;
    position: relative;
}

.content:before {
    content:'';
    position:absolute;
    top:0;
    left:0;
    width:100%;
    border-bottom: 1px solid white;
    transform: scaleX(1);
}

.bottom {
    padding-top: 4em;
    height: 100%;
    text-align: center;
}

h1 {
    font-size: 4rem;
    width: 50vw;
    line-height: 97%;
    text-align: right;
}

h1,p.tag-line {
    flex-basis: 0;
    flex-grow: 1;
    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); 
}

/* causes scroll issues */
p.tag-line {
    margin-top: auto;
    margin-bottom: auto;
    font-size: 1.3rem;
    width: 40vw;
}

u.git {
    margin-top: auto;
    margin-bottom: auto;
    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
}

a {
    text-decoration: none; 
    color: White; 
}

@media (max-width: 60em) {
    .container {
        text-align: center;
    }
    .content {
        display: inline-block;
        height: 90vh;
        padding-top: 0em;
    }

    .bottom {
        padding-top: 0em;
    }

    h1 {
        text-align: center;
        width: 90vw;
        font-size: 3em;
        padding-bottom: 1em 0;
        margin-top: 0.5em;
        margin-bottom: 1em;
    }

    p.tag-line {
        margin-left: auto;
        margin-right: auto;
        width: 60vw;
    }

    u.git {
        margin-left: auto;
        margin-right: auto;
    }
}

